# autonomous-ct-experimentation

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: demo.py
src/autonomous_ct/: __init__.py  cli.py  computation_graph.py  config.py  graph.py  llm.py
src/autonomous_ct/agents/: __init__.py  base.py  imaging.py  weather.py
src/autonomous_ct/tools/: __init__.py  tomo_recon.py  weather.py
tests/: _fakes.py  test_cli_conversation.py  test_computation_graph.py  test_graph.py  test_tomo_recon.py  test_tools.py  test_weather_graph.py
