[project]
name = "autonomous-ct-experimentation"
version = "0.1.0"
description = "LangGraph-based autonomous agent for CT experimentation, backed by the Argo LLM gateway."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "scipy>=1.17.1",
    "tiffile>=2018.10.18",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.1"]

[project.scripts]
autonomous-ct = "autonomous_ct.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_ct"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
